compiler/weave_syntax/tests/data/syntax/expressions/assert.error
error: Unexpected tokens
        --> <source>:9:29
         |
       9 |     assert(result < 21.37f32, "result is too large");
         |                             ^^^^^^^^^^^^^^^^^^^^^^^
